--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -244,12 +244,12 @@
     gap: 20px;
     padding: 40px;
     margin-top: 40px;
-    background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(20px);
+    /* background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(20px); */
     border-radius: 25px;
-    margin: 40px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+    margin: 20px;
+    /* border: 1px solid rgba(255, 255, 255, 0.1); */
+    /* box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3); */
 }
 
 .pagination-nav button {
