--- a/static/assets/css/movie.css
+++ b/static/assets/css/movie.css
@@ -93,6 +93,14 @@
     padding-top: 20px;
 }
 
+
+
+.movie-meta span{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
 .movie-title {
     font-size: 4rem;
     font-weight: 900;
@@ -349,6 +357,15 @@
     transform: translateY(-3px);
     box-shadow: 0 15px 35px rgba(241, 90, 34, 0.4);
     background: linear-gradient(135deg, #f99d1c, #f15a22);
+}
+
+.movie-meta span .material-symbols-outlined {
+    all: unset;
+    font-family: 'Material Symbols Outlined';
+    font-size: 18px;
+    line-height: 1;
+    vertical-align: middle;
+    margin-right: 6px;
 }
 
 /* Responsive Design */
