--- a/static/view/movie.html
+++ b/static/view/movie.html
@@ -37,6 +37,15 @@
                     return;
                 }
 
+                header.append(`
+                    <div class="movie-page-topbar">
+                        <div class="movie-brand">
+                            <img src="./assets/images/white-i6logo-full.png" alt="Infinity6 Logo" class="movie-brand-logo" />
+                            <span class="movie-brand-title">RaaS Session-Based</span>
+                        </div>
+                    </div>
+                `);
+
                 let sessionId = localStorage.getItem('sessionId');
                 let sessionPlaceholder = header.find('.session-id')
 
