--- a/static/assets/css/movie.css
+++ b/static/assets/css/movie.css
@@ -332,7 +332,6 @@
 /* Action Section */
 .action-section {
     text-align: center;
-    padding: 60px;
 }
 
 .action-btn {
@@ -369,7 +368,7 @@
     background-color: #000;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     border-bottom: 1px solid #222;
     z-index: 10;
     position: relative;
@@ -378,6 +377,7 @@
 .movie-brand {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 12px;
 }
 
