--- a/static/view/home.html
+++ b/static/view/home.html
@@ -16,7 +16,6 @@
                 </form>
             </div>
 
-
             <h3 class="genre-heading">
                 Filter by Genre
             </h3>
@@ -165,7 +164,7 @@
             const container = $('<div class="selected-genres"></div>');
 
             if (selectedGenres.length === 0) {
-                container.text('Nenhum gênero selecionado');
+                container.text('No genres selected');
                 return container;
             }
 
