--- a/static/assets/css/movie.css
+++ b/static/assets/css/movie.css
@@ -150,8 +150,9 @@
 
 
 .movie-plot {
+    padding-left: 10px;
     font-size: 18px;
-    line-height: 1.7;
+    line-height: 1.4;
     max-width: 600px;
     color: #e2e8f0;
 }
@@ -172,7 +173,7 @@
     backdrop-filter: blur(20px);
     border-radius: 20px;
     padding: 30px;
-    padding-bottom: 0px;
+    padding-bottom: 10px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     transition: all 0.3s ease;
     position: relative;
